--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="b1">#D9D9D9</color>
     <color name="colorHint">#C0C0C0</color>
     <color name="cl_button">#18C0C1</color>
+    <color name="color_text_green">#00900E</color>
 </resources>
