--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -25,11 +25,10 @@
                 android:id="@+id/titleFragment1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="8dp"
-                android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:fontFamily="@font/poppins_medium"
-                android:text="History"
+                android:text="@string/title_history"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
         </LinearLayout>
