--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -58,7 +58,7 @@
                 android:backgroundTint="@color/white"
                 android:src="@drawable/ic_notifications_black_24dp"
                 app:fabCustomSize="24dp"
-                android:contentDescription="@string/title_notifications"/>
+                android:contentDescription="@string/title_home"/>
         </LinearLayout>
 
         <EditText
@@ -140,19 +140,20 @@
                 android:paddingStart="10dp"
                 android:src="@drawable/baseline_add_24" />
         </LinearLayout>
+
         <Button
             android:id="@+id/search_button"
             android:layout_width="160dp"
             android:layout_height="56dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
-            android:background="@drawable/round_shape_btn"
+            android:layout_gravity="center"
             android:layout_marginBottom="15dp"
+            android:background="@drawable/background_btn"
+            android:paddingStart="30dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="30dp"
+            android:paddingBottom="10dp"
             android:text="Search"
-            android:layout_gravity="center">
-        </Button>
+            android:textColor="#FFFFFF"></Button>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
