cố fix login_registeractivitiy nhưng không được

--- a/app/src/main/res/layout/fragment_register_screen.xml
+++ b/app/src/main/res/layout/fragment_register_screen.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageView_back"
                 android:layout_width="40dp"
                 android:layout_height="33dp"
                 android:layout_marginStart="8dp"
