--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,10 +6,10 @@
         android:icon="@drawable/outline_home_24"
         android:title="Home" />
 
-    <item
-        android:id="@+id/navigation_flights"
-        android:icon="@drawable/outline_airplane_ticket_24"
-        android:title="Flights" />
+<!--    <item-->
+<!--        android:id="@+id/navigation_flights"-->
+<!--        android:icon="@drawable/outline_airplane_ticket_24"-->
+<!--        android:title="Flights" />-->
 
     <item
         android:id="@+id/navigation_history"
