--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+
     <RelativeLayout
         android:id="@+id/wrapper"
         android:layout_width="match_parent"
@@ -177,16 +184,23 @@
                     <!--                        </RelativeLayout>-->
                     <!--                    </LinearLayout>-->
 
-                    <ViewFlipper
-                        android:id="@+id/view_flipper"
+
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
+                        android:layout_height="200dp"
+                        app:cardCornerRadius="16dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
-                        android:autoStart="true"
-                        android:inAnimation="@android:anim/slide_in_left"
-                        android:outAnimation="@android:anim/slide_out_right">
-                    </ViewFlipper>
+                        android:layout_marginBottom="20dp">
+                        <ViewFlipper
+                            android:id="@+id/view_flipper"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:autoStart="true"
+                            android:inAnimation="@android:anim/slide_in_left"
+                            android:outAnimation="@android:anim/slide_out_right">
+                        </ViewFlipper>
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -198,24 +212,33 @@
                         android:text="DETAILS">
                     </TextView>
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:textAlignment="center"
-                        android:padding="10dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@color/white"
-                        android:text="Villa Kayu Lama"
-                        android:textColor="@color/black">
 
-                    </com.google.android.material.textview.MaterialTextView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="150dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_gravity="center"
+                        app:cardCornerRadius="16dp"
+                        android:layout_height="wrap_content">
+                        <com.google.android.material.textview.MaterialTextView
+                            android:layout_width="150dp"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:textAlignment="center"
+                            android:background="@color/white"
+                            android:text="Villa Kayu Lama"
+                            android:textColor="@color/black">
+                        </com.google.android.material.textview.MaterialTextView>
+                    </androidx.cardview.widget.CardView>
+
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
                         android:text="@string/Hotel_description">
 
                     </TextView>
@@ -223,6 +246,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
+                        android:layout_marginTop="20dp"
                         android:text="Continue"
                         android:background="@color/teal_200"
                         android:textColor="@color/white">
@@ -233,6 +257,6 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </RelativeLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
