--- a/app/src/main/res/layout/fragment_register_screen.xml
+++ b/app/src/main/res/layout/fragment_register_screen.xml
@@ -6,6 +6,25 @@
     android:layout_height="match_parent"
     android:background="#ffffff">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout_Progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background_layout_progress"
+        android:elevation="8dp"
+        android:visibility="gone"
+        tools:layout_editor_absoluteY="806dp">
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            android:layout_width="72dp"
+            android:layout_height="76dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ScrollView
         android:fitsSystemWindows="true"
         android:layout_width="match_parent"
@@ -173,18 +192,6 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/edt_password" />
-
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    android:layout_width="144dp"
-                    android:layout_height="81dp"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.497"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.114" />
 
                 <TextView
                     android:id="@+id/loginNow"
