--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#E9E9E9</color>
     <color name="background_color_top">#f2f5fa</color>
     <color name="background_color_bottom">#c3cfe0</color>
     <color name="main">#18C0C1</color>
