--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="cl_button">#18C0C1</color>
     <color name="color_text_green">#00900E</color>
     <color name="button_onclicked">#c9d4e4</color>
+    <color name ="gray">#979797</color>
 </resources>
