--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -244,11 +244,12 @@
                     </TextView>
 
                     <Button
+                        android:id="@+id/btn_continue"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginTop="20dp"
-                        android:text="Continue"
                         android:background="@color/teal_200"
+                        android:text="Continue"
                         android:textColor="@color/white">
 
                     </Button>
