--- a/app/src/main/res/layout/fragment_personalinformationscreen.xml
+++ b/app/src/main/res/layout/fragment_personalinformationscreen.xml
@@ -78,7 +78,7 @@
                 android:layout_marginRight="15dp">
 
                 <EditText
-                    android:id="@+id/editTextText"
+                    android:id="@+id/editTextName"
                     android:layout_width="382dp"
                     android:layout_height="60dp"
                     android:background="@drawable/draw_outline_textview"
@@ -102,7 +102,7 @@
                 android:layout_marginRight="15dp">
 
                 <EditText
-                    android:id="@+id/editTextTextEmailAddress"
+                    android:id="@+id/editTextEmailAddress"
                     android:layout_width="382dp"
                     android:layout_height="60dp"
                     android:background="@drawable/draw_outline_textview"
