--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="color_text_green">#00900E</color>
     <color name="button_onclicked">#c9d4e4</color>
     <color name ="gray_bold">#979797</color>
+    <color name ="yellow_bold">#FFD700</color>
 </resources>
