finish read list review

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -56,4 +56,12 @@
         android:id="@+id/navigation_booking_screen"
         android:name="com.lambda.travel.ui.booking.BookingFragment"
         android:label="BookingFragment" />
+    <fragment
+        android:id="@+id/navigation_reviews_screen"
+        android:name="com.lambda.travel.ui.reviews.SeenReviewFragment"
+        android:label="ReadReviewFragment" />
+    <fragment
+        android:id="@+id/navigation_infor_booking_screen"
+        android:name="com.lambda.travel.ui.InforBook.InformationBookingFragment"
+        android:label="InformationBookingFragment" />
 </navigation>
