--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -46,32 +46,35 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:orientation="horizontal">
+
                 <ImageButton
+                    android:id="@+id/bookingBackBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@null"
-                    android:src="@drawable/outline_arrow_back_24">
-                </ImageButton>
+                    android:src="@drawable/outline_arrow_back_24"></ImageButton>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="10"/>
+
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@null"
-                    android:src="@drawable/baseline_density_small_24">
-                </ImageButton>
+                    android:src="@drawable/baseline_density_small_24"
+                    android:visibility="gone"></ImageButton>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"/>
+
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@null"
-                    android:src="@drawable/outline_heart_broken_24">
-                </ImageButton>
+                    android:src="@drawable/outline_heart_broken_24"
+                    android:visibility="gone"></ImageButton>
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
@@ -91,11 +94,13 @@
                 android:textSize="15sp"
                 android:text="Việt Nam">
             </TextView>
+
             <TextView
+                android:id="@+id/booking_rating"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="45dp"
                 android:background="@drawable/round_shape_btn"
                 android:backgroundTint="@color/white"
