--- a/app/src/main/res/layout/fragment_informationbooking_screen.xml
+++ b/app/src/main/res/layout/fragment_informationbooking_screen.xml
@@ -94,7 +94,7 @@
                         android:layout_height="match_parent">
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/readReviewNameTour"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="24dp"
@@ -107,7 +107,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
-                            android:id="@+id/imageView5"
+                            android:id="@+id/starForLayoutReviewElem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
@@ -117,7 +117,7 @@
                             app:srcCompat="@drawable/baseline_star_rate_24" />
 
                         <TextView
-                            android:id="@+id/textView7"
+                            android:id="@+id/starContentReviewElem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
@@ -126,7 +126,7 @@
                             android:text="4.9"
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            app:layout_constraintStart_toEndOf="@+id/imageView5"
+                            app:layout_constraintStart_toEndOf="@+id/starForLayoutReviewElem"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
@@ -140,7 +140,7 @@
                             app:srcCompat="@drawable/baseline_location_on_24" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/readReviewLocation"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
