--- a/app/src/main/res/layout/fragment_seenreviews_screen.xml
+++ b/app/src/main/res/layout/fragment_seenreviews_screen.xml
@@ -94,7 +94,7 @@
                         android:layout_height="match_parent">
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/readReviewNameTour"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="24dp"
@@ -107,7 +107,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
-                            android:id="@+id/imageView5"
+                            android:id="@+id/starForLayoutReviewElem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
@@ -117,7 +117,7 @@
                             app:srcCompat="@drawable/baseline_star_rate_24" />
 
                         <TextView
-                            android:id="@+id/textView7"
+                            android:id="@+id/starReview"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
@@ -126,7 +126,7 @@
                             android:text="4.9"
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            app:layout_constraintStart_toEndOf="@+id/imageView5"
+                            app:layout_constraintStart_toEndOf="@+id/starForLayoutReviewElem"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
@@ -140,7 +140,7 @@
                             app:srcCompat="@drawable/baseline_location_on_24" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/readReviewLocation"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
@@ -194,234 +194,10 @@
                         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                         <LinearLayout
+                            android:id="@+id/listReviewContainer"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
-
-                                <ImageView
-                                    android:id="@+id/imageView9"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginTop="8dp"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent"
-                                    app:srcCompat="@drawable/avatar_placeholder" />
-
-                                <TextView
-                                    android:id="@+id/textView9"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="16dp"
-                                    android:layout_marginTop="18dp"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:text="Name"
-                                    android:textSize="20sp"
-                                    app:layout_constraintStart_toEndOf="@+id/imageView9"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <TextView
-                                    android:id="@+id/textView10"
-                                    android:layout_width="358dp"
-                                    android:layout_height="61dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginEnd="24dp"
-                                    android:background="@drawable/draw_outline_textview"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:gravity="center_vertical"
-                                    android:paddingLeft="8dp"
-                                    android:text="Good"
-                                    android:textSize="20sp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
-
-                                <ImageView
-                                    android:id="@+id/imageView10"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginTop="8dp"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent"
-                                    app:srcCompat="@drawable/avatar_placeholder" />
-
-                                <TextView
-                                    android:id="@+id/textView11"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="16dp"
-                                    android:layout_marginTop="18dp"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:text="Name"
-                                    android:textSize="20sp"
-                                    app:layout_constraintStart_toEndOf="@+id/imageView10"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <TextView
-                                    android:id="@+id/textView12"
-                                    android:layout_width="358dp"
-                                    android:layout_height="61dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginEnd="24dp"
-                                    android:background="@drawable/draw_outline_textview"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:gravity="center_vertical"
-                                    android:paddingLeft="8dp"
-                                    android:text="Good"
-                                    android:textSize="20sp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/imageView10" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
-
-                                <ImageView
-                                    android:id="@+id/imageView11"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginTop="8dp"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent"
-                                    app:srcCompat="@drawable/avatar_placeholder" />
-
-                                <TextView
-                                    android:id="@+id/textView13"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="16dp"
-                                    android:layout_marginTop="18dp"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:text="Name"
-                                    android:textSize="20sp"
-                                    app:layout_constraintStart_toEndOf="@+id/imageView11"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <TextView
-                                    android:id="@+id/textView14"
-                                    android:layout_width="358dp"
-                                    android:layout_height="61dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginEnd="24dp"
-                                    android:background="@drawable/draw_outline_textview"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:gravity="center_vertical"
-                                    android:paddingLeft="8dp"
-                                    android:text="Good"
-                                    android:textSize="20sp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/imageView11" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
-
-                                <ImageView
-                                    android:id="@+id/imageView12"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginTop="8dp"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent"
-                                    app:srcCompat="@drawable/avatar_placeholder" />
-
-                                <TextView
-                                    android:id="@+id/textView15"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="16dp"
-                                    android:layout_marginTop="18dp"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:text="Name"
-                                    android:textSize="20sp"
-                                    app:layout_constraintStart_toEndOf="@+id/imageView12"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <TextView
-                                    android:id="@+id/textView16"
-                                    android:layout_width="358dp"
-                                    android:layout_height="61dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginEnd="24dp"
-                                    android:background="@drawable/draw_outline_textview"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:gravity="center_vertical"
-                                    android:paddingLeft="8dp"
-                                    android:text="Good"
-                                    android:textSize="20sp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/imageView12" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="118dp">
-
-                                <ImageView
-                                    android:id="@+id/imageView13"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginTop="8dp"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent"
-                                    app:srcCompat="@drawable/avatar_placeholder" />
-
-                                <TextView
-                                    android:id="@+id/textView17"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="16dp"
-                                    android:layout_marginTop="18dp"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:text="Name"
-                                    android:textSize="20sp"
-                                    app:layout_constraintStart_toEndOf="@+id/imageView13"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <TextView
-                                    android:id="@+id/textView18"
-                                    android:layout_width="358dp"
-                                    android:layout_height="61dp"
-                                    android:layout_marginStart="24dp"
-                                    android:layout_marginEnd="24dp"
-                                    android:background="@drawable/draw_outline_textview"
-                                    android:fontFamily="@font/poppins_medium"
-                                    android:gravity="center_vertical"
-                                    android:paddingLeft="8dp"
-                                    android:text="Good"
-                                    android:textSize="20sp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/imageView13" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
                         </LinearLayout>
                     </ScrollView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
