--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="button_onclicked">#c9d4e4</color>
     <color name ="gray_bold">#979797</color>
     <color name ="yellow_bold">#FFD700</color>
+    <color name ="footer_contact">#DDEFE8</color>
 </resources>
